load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rust_test", "rustfmt_test")

rust_library(
    name = "types-rs",
    srcs = glob(["src/**/*.rs"]),
    tags = ["rust"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "tests",
    size = "small",
    crate = ":types-rs",
    deps = [
        "@crates//:proptest",
    ],
)

rust_clippy(
    name = "clippy",
    testonly = True,
    deps = [
        ":tests",
        ":types-rs",
    ],
)

rustfmt_test(
    name = "rustfmt",
    targets = [
        ":tests",
        ":types-rs",
    ],
)
