load("//tools/ts_build:lint_test.bzl", "lint_test")
load("//tools/ts_build:ts_library.bzl", "ts_library")

ts_library(
    name = "multirun",
    deps = [
        "//:node_modules/@types/chalk",
        "//:node_modules/@types/node",
        "//:node_modules/chalk",
        "//:node_modules/concurrently",
    ],
)

lint_test(name = "lint")
