load("//tools/ts_build:json_package.bzl", "json_package")
load("//tools/ts_build:lint_test.bzl", "lint_test")
load("//tools/ts_build:ts_tests.bzl", "ts_tests")

ts_tests(
    name = "tests",
    data = [
        "//:package_json",
    ],
    tmp_enable_tests = True,
    deps = [
        "//:node_modules/@types/jest",
        "//:node_modules/@types/node",
        "//:node_modules/@types/testing-library__jest-dom",
        "//tools/playwright:json",
    ],
)

lint_test(name = "lint")

json_package(name = "json")
