load("@aspect_rules_js//js:defs.bzl", "js_library")
load("//tools/apps:dev_backend.bzl", "dev_backend")

dev_backend(
    name = "dev_server",
    additional_env_vars = {
        "ADMIN_WORKSPACE": "$${BUILD_WORKSPACE_DIRECTORY}/apps/admin/backend/dev-workspace",
    },
    backend_entry_point = "//apps/admin/backend/src:main.js",
    backend_src = "//apps/admin/backend/src",
    default_port = "3004",
    vx_machine_type = "admin",
)

js_library(
    name = "db_schema",
    data = ["schema.sql"],
    tags = ["manual"],
    visibility = [":__subpackages__"],
)
